@@ -109,6 +109,22 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
+        <!-- Prepend Npcap folder to the test JVM PATH -->
+            <!-- Make Windows loader see Npcap + CRT in System32 -->
+        <environmentVariables>
+          <PATH>C:\Windows\System32\Npcap;C:\Windows\System32;${env.PATH}</PATH>
+        </environmentVariables>
+
+        <!-- JNR/Java native search hints -->
+        <systemPropertyVariables>
+          <jnr.ffi.library.path>C:\Windows\System32\Npcap;C:\Windows\System32</jnr.ffi.library.path>
+          <java.library.path>C:\Windows\System32\Npcap;C:\Windows\System32</java.library.path>
+        </systemPropertyVariables>
+
+        <!-- Allow jffi to call System.load without future warnings -->
+        <argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
+
+
           <useModulePath>false</useModulePath>
         </configuration>
       </plugin>
